# labflow-ai

./: .gitignore  AGENTS.md  CLAUDE.md  LAB_NOTEBOOK.md  LICENSE  README.md  bmv_measure.py  bootstrap.sh  main.py  measure_diameters.py  plot_vlp_scatter.py  pyproject.toml  vlp_measure.py  vlp_measure_v2.py
.claude/skills/lab-pipeline/: SKILL.md
.github/workflows/: validate-reminder.yml  validate.yml
analysis/: add_to_reference.py  bmv_measure.py  eval.py  plot_capsid_groups.py  seed_benchmarks.py  validate_script.py  vlp_measure.py  vlp_measure_v2.py
benchmarks/bmv/: reference_hand.csv  reference_runs.csv
benchmarks/vlp/: reference_hand.csv  reference_runs.csv
results/: vlp_measurements.csv
results/archive_v1/: diameters.csv  gold_np_diameters.csv  vlp_measurements.csv
results/bmv/: SUMMARY.md  bmv_measurements.csv  eval_report.md
results/bmv/hand/: bmv_hand_measurements.csv
results/vlp100/: VLP_100_hand_measurements.csv  vlp_measurements.csv
results/vlp100_script/: vlp_measurements.csv
results/vlp100_v2/: vlp_measurements.csv
results/vlp17/: VLP_17_hand_measurements.csv  vlp17_0010_hand.csv  vlp17_003_hand.csv
results/vlp17_script/: vlp_measurements.csv
results/vlp17_v2/: eval_report.md  vlp_measurements.csv
results/vlp17_v2_test/: vlp_measurements.csv
results/vlp20/: vlp_measurements.csv
results/vlp20_v2/: vlp_measurements.csv
