[project]
name = "labflow-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "ncempy>=1.15",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-image>=0.26.0",
    "tqdm>=4.67.3",
]
